--- a/Contact.html
+++ b/Contact.html
@@ -78,10 +78,10 @@
     <section class="about-me">
         <div class="container about-container">
             <div class="about-image">
-                <img src="img/ImgPersonnes/Manon.png" alt="Portrait de Manon">
+                <img src="" alt="Portrait de Manon">
             </div>
             <div class="about-text">
-                <h2>Manon Joulié</h2>
+                <h2>Manon Julliard</h2>
                 <span class="profession">Praticienne périnatale certifiée</span>
                 <p>Bienvenue ! Je suis Manon, praticienne périnatale certifiée passionnée et spécialisée dans
                     l'accompagnement
